# Copyright (C) 2019 chankyin
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "off-side"
version = "0.1.0"
authors = ["chankyin <chankyin1970@gmail.com>"]
edition = "2018"
homepage = "https://github.com/chankyin/off-side.rs"
repository = "https://github.com/chankyin/off-side.rs.git"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
indent-stack = "0.1"
proc-macro2 = {version = "0.4", features = ["proc-macro", "span-locations"]}
quote = "0.6"
syn = "0.15"
